@@ -30,6 +30,7 @@
 			<label index="staticDS.wizard.description2.1">Are you sure you want to enable static data structures? This feature is experimental and it is recommended that you perform a database backup of all tables involved (pages, tt_content, tx_templavoila_datastructure, and tx_templavoila_tmplobj) before continuing.</label>
 			<label index="staticDS.wizard.dircheck.ok">Directory "%s"  exists and is writable. Ready for usage.</label>
 			<label index="staticDS.wizard.dircheck.notok">&lt;strong&gt;Error:&lt;/strong&gt; Directory "%s"   could not be created!</label>
+			<label index="staticDS.wizard.dircheck.notset">&lt;strong&gt;Setting:&lt;/strong&gt; "%s" missing. Please check and update the existing configuration.</label>
 			<label index="staticDS.wizard.submit1">static DS Wizard - Step 1: Check paths</label>
 			<label index="staticDS.wizard.submit2">static DS Wizard - Step 2: Copy your existing data structures to files</label>
 			<label index="staticDS.wizard.submit3">static DS Wizard - Step 2: Update database records and enable static data structures</label>
